--- a/python-lessons/00 - An Intro to Jupyter Notebooks.ipynb
+++ b/python-lessons/00 - An Intro to Jupyter Notebooks.ipynb
@@ -371,10 +371,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "$\\Sigma_{i=1}^{N} 2^{-i} \\approx 1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hypothesis\n",
+    "Today we are going to test out an idea on artificial intelligence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -394,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
