Update in python lessons 1-2

--- a/python-lessons/02 - Functions-Python.ipynb
+++ b/python-lessons/02 - Functions-Python.ipynb
@@ -27,13 +27,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_two_numbers():\n",
     "    answer = 50 + 15\n",
     "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add_two_numbers()"
    ]
   },
   {
@@ -47,10 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def add_number(num1):\n",
@@ -71,9 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "add_number(90)"
    ]
@@ -87,11 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
     "# A function called divide_two_numbers that take 2 arguments: num1 and num2\n",
     "def divide_two_numbers(num1, num2): \n",
@@ -118,6 +154,15 @@
     "    * Encapsulate complexity so that we can treat it as a single “thing”.\n",
     "* **Enables reusablility**.\n",
     "    * Write one time, use many times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def area (width, height)"
    ]
   },
   {
@@ -181,12 +226,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"name\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "def quote(original, wrapper):\n",
+    "    add=wrapper+original+wrapper\n",
+    "    return add\n",
+    "a= quote(\"name\",'\"')\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,12 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hm'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def outer(s):\n",
+    "    p=s[0]+s[-1]\n",
+    "    return p\n",
+    "outer(\"helium\")\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,6 +303,23 @@
     "    ~~~\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(None))"
    ]
   },
   {
@@ -286,14 +376,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "255.92777777777775\n",
+      "256.4833333333333\n",
+      "257.0388888888889\n",
+      "257.59444444444443\n",
+      "258.15\n"
+     ]
+    }
+   ],
    "source": [
     "def fahr_to_kelvin(temp_f):\n",
-    "    # write your function here"
+    "    # write your function here\n",
+    "    temp_k=((temp_f-32)*(5/9)+273.15)\n",
+    "    return temp_k\n",
+    "temps = [1,2,3,4,5]\n",
+    "for temp in temps:\n",
+    "    temp_k=fahr_to_kelvin(temp)\n",
+    "    print(fahr_to_kelvin(temp))\n",
+    "            "
    ]
   },
   {
@@ -307,13 +414,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "-263.150\n",
+      "-263.15\n",
+      "20\n",
+      "-253.150\n",
+      "-253.14999999999998\n",
+      "30\n",
+      "-243.150\n",
+      "-243.14999999999998\n",
+      "40\n",
+      "-233.150\n",
+      "-233.14999999999998\n",
+      "50\n",
+      "-223.150\n",
+      "-223.14999999999998\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your function here"
+    "# write your function here\n",
+    "def kel_to_cel(temp_k):\n",
+    "    temp_c=(temp_k-273.15)\n",
+    "    return temp_c\n",
+    "temps=[10, 20, 30, 40, 50]\n",
+    "for temp in temps:\n",
+    "    print(temp)\n",
+    "    print(\"%.3f\" % kel_to_cel(temp))\n",
+    "    print(kel_to_cel(temp))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-adad51e131ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtemps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m40\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtemp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtemps\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mtemp_c\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mkel_to_cel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "# write your function here\n",
+    "def kel_to_cel(temp_k):\n",
+    "    temp_c=(temp_k-273.15)\n",
+    "    return temp_c\n",
+    "temps=[10, 20, 30, 40, 50]\n",
+    "i=0\n",
+    "for i < len(temps):\n",
+    "    for temp in temps:\n",
+    "        temp_c=kel_to_cel(temp)\n",
+    "        print(\"The temperature in Kelvin is\", temps)\n",
+    "        print(\"The temperature in Celsius is %.3f\",temp_c)\n",
+    "        i=i+1\n",
+    " #   print(temp)\n",
+    " #   print(\"%.3f\" % kel_to_cel(temp))\n",
+    " #   print(kel_to_cel(temp))\n"
    ]
   },
   {
@@ -330,13 +501,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.16666666666669\n",
+      "0.16666666666668561\n",
+      "-40.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your function here"
+    "\n",
+    "def fahr_to_cel(temp_f):\n",
+    "    '''\n",
+    "    This is a function to convert fahrenheit to celsius\n",
+    "    \n",
+    "    Inputs:\n",
+    "        temp_f: temp in f\n",
+    "    Outputs:\n",
+    "        temp_c: temp in c\n",
+    "    '''\n",
+    "    temp_k=fahr_to_kelvin(temp_f)\n",
+    "    temp_c=kel_to_cel(temp_k)\n",
+    "    return temp_c\n",
+    "temps= [212.3, 32.3, -40]\n",
+    "for temp in temps:\n",
+    "    print(fahr_to_cel(temp))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function fahr_to_cel in module __main__:\n",
+      "\n",
+      "fahr_to_cel(temp_f)\n",
+      "    This is a function to convert fahrenheit to celsius\n",
+      "    \n",
+      "    Inputs:\n",
+      "        temp_f: temp in f\n",
+      "    Outputs:\n",
+      "        temp_c: temp in c\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(fahr_to_cel)"
    ]
   },
   {
@@ -356,9 +576,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no parameters:\n",
+      "a: 1 b: 2 c: 3\n",
+      "one parameter:\n",
+      "a: 55 b: 2 c: 3\n",
+      "two parameters:\n",
+      "a: 55 b: 66 c: 3\n"
+     ]
+    }
+   ],
    "source": [
     "def display(a=1, b=2, c=3):\n",
     "    print('a:', a, 'b:', b, 'c:', c)\n",
@@ -380,9 +613,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "only setting the value of c\n",
+      "a: 1 b: 2 c: 77\n"
+     ]
+    }
+   ],
    "source": [
     "print('only setting the value of c')\n",
     "display(c=77)"
@@ -410,10 +652,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_temp(temp, type='F'):\n",
+    "    if type =='F':\n",
+    "        return temp\n",
+    "    else:\n",
+    "        return fahr_to_cel(temp)\n",
+    "#temps=[54, 11.7, -40]\n",
+    "#for temp in temps:\n",
+    "    #print(convert_temp(temp, 'C')) \n",
+    "#print(convert_temp(temp, 'C'))\n",
+    "#print(convert_temp(temp, 'F'))\n",
+    "print(convert_temp(54))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -454,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
