--- a/python-lessons/01 - Introduction to Programming with Python.ipynb
+++ b/python-lessons/01 - Introduction to Programming with Python.ipynb
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1082,23 +1082,23 @@
     }
    ],
    "source": [
-    "zoo={\"lion\":\"1\",\"tiger\":\"2\",\"bear\":\"3\"}\n",
+    "zoo={\"lion\":1,\"tiger\":2,\"bear\":3}\n",
     "print(zoo[\"tiger\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lion': '1', 'tiger': '2', 'bear': '3', 'eagle': 4, 'leopard': 5}\n",
-      "dict_keys(['lion', 'tiger', 'bear', 'eagle', 'leopard'])\n",
-      "dict_values(['1', '2', '3', 4, 5])\n",
-      "5\n"
+      "{'lion': 1, 'tiger': 2, 'bear': 3, 'leopard': 5}\n",
+      "dict_keys(['lion', 'tiger', 'bear', 'leopard'])\n",
+      "dict_values([1, 2, 3, 5])\n",
+      "4\n"
      ]
     }
    ],
@@ -1548,25 +1548,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +=: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-133-16c7248f4714>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzoo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"%s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mpopulation\u001b[0m \u001b[1;33m+=\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The total zoo population is: %i\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mpopulation\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'int' and 'str'"
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "The total zoo population is: 11\n"
      ]
     }
    ],
