Update in python lessons 3

--- a/python-lessons/02 - Functions-Python.ipynb
+++ b/python-lessons/02 - Functions-Python.ipynb
@@ -652,17 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convert_temp(temp, type='F'):\n",
     "    if type =='F':\n",
@@ -672,9 +664,36 @@
     "#temps=[54, 11.7, -40]\n",
     "#for temp in temps:\n",
     "    #print(convert_temp(temp, 'C')) \n",
-    "#print(convert_temp(temp, 'C'))\n",
-    "#print(convert_temp(temp, 'F'))\n",
-    "print(convert_temp(54))"
+    "    #print(convert_temp(temp, 'C'))\n",
+    "    #print(convert_temp(temp, 'F'))\n",
+    "    print(convert_temp(54))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.222222222222229\n",
+      "51.8\n",
+      "37.77777777777777\n"
+     ]
+    }
+   ],
+   "source": [
+    "def temp_conversion(temp, temptype='F'):\n",
+    "    \n",
+    "    if temptype == \"F\":\n",
+    "        return fahr_to_cel(temp)\n",
+    "    elif temptype == \"C\":\n",
+    "        return(temp*(9/5))+32\n",
+    "print(temp_conversion(54, temptype='F'))\n",
+    "print(temp_conversion(11, temptype='C'))\n",
+    "print(temp_conversion(100))"
    ]
   },
   {
